[project]
name = "truzt"
version = "0.0.1"
description = "WEBPRO Data Model"
authors = [
    { name = "Shoji, Yutaka", email = "ytk.shoji@gmail.com" }
]
dependencies = [
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "datamodel-code-generator>=0.25.9",
    "pytest>=8.3.2",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-material>=9.5.31",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.9",
    "pylint>=3.2.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/truzt"]
